# swarmthread

./: .gitignore  AGENTS.md
backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC.md  alembic.ini  pyproject.toml  render.yaml
backend/app/: __init__.py  config.py  db.py  db_async.py  logging.py  main.py
backend/app/api/: __init__.py  agents.py  analysis.py  feed.py  health.py  models.py  runs.py  threads.py  users.py
backend/app/models/: __init__.py  models.py
backend/app/prompts/: agent_decide_action.md  final_report.md
backend/app/schemas/: __init__.py  action.py  run.py  seed.py  user.py
backend/app/services/: __init__.py  action_validator.py  content_novelty.py  cost_guard.py  encryption.py  openrouter_client.py  personas.py  prompt_builder.py  simulation_runner.py  timeline_builder.py
backend/app/worker/: main.py
backend/migrations/: env.py
backend/migrations/versions/: 9f1382a9c502_initial.py  add_user_support.py  cc445e7c1519_drop_controversy_level_from_run_seeds.py
backend/tests/test_api/: test_runs.py
backend/tests/test_services/: test_action_validator.py  test_content_novelty.py
frontend/: AGENTS.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  models.ts  runs.ts  users.ts
frontend/src/components/: FeedItem.tsx  Layout.tsx
frontend/src/hooks/: useCreateRun.ts  useFeed.ts  useFormDraft.ts  useRun.ts  useUserSettings.ts
frontend/src/pages/: AgentPage.css  AgentPage.tsx  AnalysisPage.css  AnalysisPage.tsx  FeedPage.tsx  HistoryPage.css  (+9 more)
(+8 files in other folders)
